--- a/sacco.css
+++ b/sacco.css
@@ -1,12 +1,13 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family:font-family:Lobster, cursive;
   line-height: 1.6;
   background: #f1f1f1;
 }
 
 header {
   background: #0077b6;
+  font-family: lobster, cursive;
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -14,6 +15,7 @@ header {
 
 nav {
   display: flex;
+  font-family: lobster, cursive;
   justify-content: center;
   background: #023e8a;
   position: relative;
@@ -21,6 +23,7 @@ nav {
 
 nav a {
   color: #fff;
+  font-family: lobster, cursive;
   padding: 14px 20px;
   text-decoration: none;
 }
@@ -60,7 +63,7 @@ nav a:hover ~ .hover-image {
 .hero {
   padding: 60px 20px;
   text-align: center;
-  background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=1470&q=80');
+    background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?...');
   background-size: cover;
   background-position: center;
   color: #fff;
@@ -148,6 +151,7 @@ button:hover {
 footer {
   background: #03045e;
   color: #fff;
+  font-family: 'lobster', cursive;
   text-align: center;
   padding: 20px;
   margin-top: 40px;
